--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3001
 DB_URI="mongodb+srv://root:root@cluster0-2e5dx.mongodb.net/contacts?retryWrites=true&w=majority"
+PRIVATE_KEY=jagfjsfgjbsdfbgsdfbgjdjfngjnsdjfng
