--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-
     "dev": "nodemon index.js"
-
   },
   "repository": {
     "type": "git",
@@ -24,13 +22,13 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
-
     "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.18",
     "morgan": "^1.10.0",
-
     "shortid": "^2.2.15",
     "yargs": "^15.3.1"
   }
